--- a/UCR.Negotium/Report/template.html
+++ b/UCR.Negotium/Report/template.html
@@ -37,30 +37,21 @@
                                         <b>#if ($proyecto.PagaImpuesto) Si #else No #end</b></div>
                                         <div class="form-group"> Porcentaje de Impuesto: <b>$proyecto.PorcentajeImpuesto %</b></div>
                                         <div class="form-group"> Posee Financiamiento:
-                                            <b>#if ($proyecto.ConFinanciamiento) Si #else No #end</b> </div>
+                                            <b>#if ($proyecto.ConFinanciamiento) Si #else No #end</b> 
+                                        </div>
                                         <div class="form-group"> Bien o Servicio: <b>$proyecto.ObjetoInteres</b></div>
+                                        <div class="form-group"> Ubicación: 
+                                            <b>$proyecto.Provincia, $proyecto.Canton, $proyecto.Distrito, $proyecto.DireccionExacta</b>
+                                        </div>
                                     </div>
                                 </div>
-
                                 <div class="col-lg-8">
-                                    <div class="panel panel-default panel-body">
-                                        <h4>Ubicación</h4>
-                                        <hr>
-                                        <div class="col-lg-4">
-                                            <div class="form-group"> Provincia: <b>$proyecto.Provincia</b></div>
-                                            <div class="form-group"> Cantón: <b>$proyecto.Canton</b></div>
-                                            <div class="form-group"> Distrito: <b>$proyecto.Distrito</b></div>
-                                        </div>
-
-                                        <div class="col-lg-8 form-group"> Dirección exacta: <b>$proyecto.DireccionExacta</b></div>
-                                    </div>
                                     <div class="panel panel-default panel-body">
                                         <h4>Resumen Ejecutivo</h4>
                                         <hr>
                                         $proyecto.ResumenEjecutivo<br>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -77,13 +68,13 @@
                                     <div class="panel panel-default panel-body">
                                         <h4>Representante legal de la Organización</h4>
                                         <hr>
-                                        <div class="form-group"> Nombre: <b>$proyecto.Proponente</b></div>
-                                        <div class="form-group"> Cédula: <b>$proyecto.Proponente.NumIdentificacion</b></div>
-                                        <div class="form-group"> Teléfono: <b>$proyecto.Proponente.Telefono</b></div>
-                                        <div class="form-group"> Correo Electrónico: <b>$proyecto.Proponente.Email</b></div>
-                                        <div class="form-group"> Puesto en la Organización: <b>$proyecto.Proponente.PuestoEnOrganizacion</b></div>
+                                        <div class="form-group"> Nombre: <b>$proyecto.OrganizacionProponente.Proponente</b></div>
+                                        <div class="form-group"> Cédula: <b>$proyecto.OrganizacionProponente.Proponente.NumIdentificacion</b></div>
+                                        <div class="form-group"> Teléfono: <b>$proyecto.OrganizacionProponente.Proponente.Telefono</b></div>
+                                        <div class="form-group"> Correo Electrónico: <b>$proyecto.OrganizacionProponente.Proponente.Email</b></div>
+                                        <div class="form-group"> Puesto en la Organización: <b>$proyecto.OrganizacionProponente.Proponente.PuestoEnOrganizacion</b></div>
                                         <div class="form-group"> Género: 
-                                        <b> #if ($proyecto.Proponente.Genero) Femenino #else Masculino #end</b></div>
+                                        <b> #if ($proyecto.OrganizacionProponente.Proponente.Genero) Femenino #else Masculino #end</b></div>
                                         <div class="form-group"> Es Representante Individual:
                                         <b>#if ($proyecto.EsRepresentanteIndividual) Si #else No #end</b></div>
                                     </div>
@@ -92,12 +83,12 @@
                                     <div class="panel panel-default panel-body">
                                         <h4>Organización</h4>
                                         <hr>
-                                        <div class="form-group"> Tipo: <b>$proyecto.Proponente.Organizacion.Tipo</b></div>
-                                        <div class="form-group"> Nombre de la Organización: <b>$proyecto.Proponente.Organizacion.NombreOrganizacion</b></div>
-                                        <div class="form-group"> Cédula Jurídica: <b>$proyecto.Proponente.Organizacion.CedulaJuridica</b></div>
-                                        <div class="form-group"> Teléfono: <b>$proyecto.Proponente.Organizacion.Telefono</b></div>
-                                        <div class="form-group"> Correo Electrónico: <b>$proyecto.Proponente.Organizacion.CorreoElectronico</b></div>
-                                        <div class="form-group"> Descripción: <b>$proyecto.Proponente.Organizacion.Descripcion</b></div>
+                                        <div class="form-group"> Tipo: <b>$proyecto.OrganizacionProponente.Tipo</b></div>
+                                        <div class="form-group"> Nombre de la Organización: <b>$proyecto.OrganizacionProponente.NombreOrganizacion</b></div>
+                                        <div class="form-group"> Cédula Jurídica: <b>$proyecto.OrganizacionProponente.CedulaJuridica</b></div>
+                                        <div class="form-group"> Teléfono: <b>$proyecto.OrganizacionProponente.Telefono</b></div>
+                                        <div class="form-group"> Correo Electrónico: <b>$proyecto.OrganizacionProponente.CorreoElectronico</b></div>
+                                        <div class="form-group"> Descripción: <b>$proyecto.OrganizacionProponente.Descripcion</b></div>
                                     </div>
                                 </div>
                             </div>
@@ -288,6 +279,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- /.row -->
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
@@ -295,6 +287,11 @@
                                 <h3 class="panel-title">Costos del Proyecto</h3>
                             </div>
                             <div class="panel-body">
+                                <div class="table-responsive">
+                                     <table class="table table-bordered table-hover table-striped">
+                                         <caption> Variación Anual de Costos </caption>
+                                     </table>
+                                </div>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-hover table-striped">
                                         <thead>
@@ -390,7 +387,6 @@
                     </div>
                 </div>
                 <!-- /.row -->
-
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
@@ -419,7 +415,6 @@
                     </div>
                 </div>
                 <!-- /.row -->
-
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
@@ -476,7 +471,6 @@
                     </div>
                 </div>
                 <!-- /.row -->
-
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
@@ -592,5 +586,4 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 </body>
-
 </html>
