Se agrega indicador de relacion BC con inversion inicial, se terminan cambios en UI y mejora estructura de código

--- a/UCR.Negotium/Report/template.html
+++ b/UCR.Negotium/Report/template.html
@@ -666,8 +666,9 @@
                             <div class="form-group"> Tasa de Costo Capital: <b>$proyecto.TasaCostoCapitalString</b></div>
                             #if ($proyecto.TipoProyecto.CodTipo == 1)
                             <div class="form-group"> TIR: <b>$TIR</b></div>
-                            <div class="form-group"> PRI (En Años): <b>$PRI</b></div>
                             <div class="form-group"> Relación B/C: <b>$RelacionBC</b></div>
+                            <div class="form-group"> Relación B/C (Con Inversión Inicial): <b>$RelacionBCInvInicial</b></div>
+                            <div class="form-group"> PRI (En Años): <b>$PRI</b></div>
                             <div class="form-group"> VAN: <b>$VAN</b></div>
                             <div class="form-group"> Personas participantes: <b>$proyecto.PersonasParticipantes</b><br /></div>
                             <div class="form-group"> Familias involucradas: <b>$proyecto.FamiliasInvolucradas</b></div>
