Creación de indicador Relacion B/C sin inversión inicial. Campo días de desface para parametrizar el calculo de capital de trabajo. Actualización del reporte y base de datos

--- a/UCR.Negotium/Report/template.html
+++ b/UCR.Negotium/Report/template.html
@@ -451,7 +451,8 @@
                 <tfoot>
                     <tr>
                         <td class="remove-margin">
-                            Recuperación Costo Total: $recuperacionCT
+                            <div class="form-group"> Días de Desface: <b>$proyecto.DiasDesfaceCapitalTrabajo</b></div>
+                            <div class="form-group"> Recuperación Costo Total: <b>$recuperacionCT</b></div>
                         </td>
                     </tr>
                 </tfoot>
